--- a/scATAC_seq_(1)_DA.ipynb
+++ b/scATAC_seq_(1)_DA.ipynb
@@ -320,10 +320,10 @@
       ],
       "metadata": {
         "id": "CM_xhHZxUcF5",
-        "outputId": "4be2b1d0-cd41-4380-e4dd-e9a46a13aea2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4be2b1d0-cd41-4380-e4dd-e9a46a13aea2"
       },
       "id": "CM_xhHZxUcF5",
       "execution_count": 18,
@@ -598,11 +598,11 @@
         "adata_concat"
       ],
       "metadata": {
-        "id": "JLg8KThFr40i",
-        "outputId": "db2977c5-097d-4d87-97e6-20a3992fa72f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JLg8KThFr40i",
+        "outputId": "db2977c5-097d-4d87-97e6-20a3992fa72f"
       },
       "id": "JLg8KThFr40i",
       "execution_count": 37,
@@ -646,19 +646,33 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ca4915b7-81f6-4768-bd12-4e5288c6f329",
-      "metadata": {
-        "id": "ca4915b7-81f6-4768-bd12-4e5288c6f329"
-      },
-      "outputs": [],
       "source": [
+        "import tqdm\n",
+        "\n",
         "# Perform a t-test for each peak/gene\n",
         "pvals = []\n",
-        "for peak in adata_concat.var_names:\n",
-        " _, pval = stats.ttest_ind(condition1[:, peak].X.toarray(), condition2[:, peak].X.toarray())\n",
-        " pvals.append(pval)"
+        "for peak in tqdm.tqdm(adata_concat.var_names, desc=\"Calculating p-values\"):\n",
+        "    _, pval = stats.ttest_ind(condition1[:, peak].X.toarray(), condition2[:, peak].X.toarray())\n",
+        "    pvals.append(pval)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "76CtVAiHtRA8",
+        "outputId": "610b3f7e-a548-47d0-f3e8-6a12cbf78517",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "76CtVAiHtRA8",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Calculating p-values:   0%|          | 166/53588 [00:51<4:01:35,  3.69it/s]"
+          ]
+        }
       ]
     },
     {
