--- a/scATAC_seq_(1)_DA.ipynb
+++ b/scATAC_seq_(1)_DA.ipynb
@@ -382,138 +382,21 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "62023b15-0427-43d2-ada2-edbaf46b20cb",
-      "metadata": {
-        "id": "62023b15-0427-43d2-ada2-edbaf46b20cb"
-      },
-      "outputs": [],
       "source": [
-        "# Assuming adata is your AnnData object\n",
-        "condition1 = adata_concat[adata_concat.obs['Treatment'] == 'Treated w/AOA']\n",
-        "condition2 = adata_concat[adata_concat.obs['Treatment'] == 'Untreated']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Original code\n",
-        "#pvals = []\n",
-        "# for peak in adata_concat.var_names: _, pval = stats.ttest_ind(condition1[:, peak].X.toarray(), condition2[:, peak].X.toarray())\n",
-        "# pvals.append(pval)"
-      ],
-      "metadata": {
-        "id": "0ZTRvObBuU9_"
-      },
-      "id": "0ZTRvObBuU9_",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "source": [
-        "##Improved code with progress tracking\n",
-        "#import tqdm\n",
+        "# Perform differential accessibility testing with Wilcoxon rank-sum test\n",
+        "sc.tl.rank_genes_groups(adata_concat, 'Treatment', method='wilcoxon')\n",
         "\n",
-        "## Perform a t-test for each peak/gene\n",
-        "#pvals = []\n",
-        "#for peak in tqdm.tqdm(adata_concat.var_names, desc=\"Calculating p-values\"):\n",
-        "#    _, pval = stats.ttest_ind(condition1[:, peak].X.toarray(), condition2[:, peak].X.toarray())\n",
-        "#    pvals.append(pval)"
+        "# Access results in `adata_concat.uns['rank_genes_groups']`\n",
+        "# For example, to get the top differentially accessible regions:\n",
+        "top_dars = sc.get.rank_genes_groups_df(adata_concat, group='Treated w/AOA', pval_cutoff=0.05)"
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "76CtVAiHtRA8"
+        "id": "CRjmsHTz0G1R"
       },
-      "id": "76CtVAiHtRA8",
+      "id": "CRjmsHTz0G1R",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "source": [
-        "from joblib import Parallel, delayed\n",
-        "import multiprocessing\n",
-        "import tqdm\n",
-        "\n",
-        "num_cores = multiprocessing.cpu_count()\n",
-        "\n",
-        "pvals = Parallel(n_jobs=num_cores)(\n",
-        "       delayed(stats.ttest_ind)(condition1[:, peak].X.toarray(), condition2[:, peak].X.toarray())\n",
-        "       for peak in tqdm.tqdm(adata_concat.var_names, desc=\"Calculating p-values\")\n",
-        "   )\n",
-        "pvals = [p[1] for p in pvals]  # Extract p-values from results"
-      ],
-      "cell_type": "code",
-      "metadata": {
-        "id": "qoEFcQ1jvg0H"
-      },
-      "id": "qoEFcQ1jvg0H",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "0acc1066-bb4a-4c71-999a-c77e58d65cbd",
-      "metadata": {
-        "id": "0acc1066-bb4a-4c71-999a-c77e58d65cbd"
-      },
-      "outputs": [],
-      "source": [
-        "# Adjust p-values for multiple testing (e.g., using Benjamini-Hochberg)\n",
-        "from statsmodels.stats.multitest import multipletests\n",
-        "_, pvals_adj, _, _ = multipletests(pvals, method='fdr_bh')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8f560497-6eaa-4600-af81-cddaf3db3a7d",
-      "metadata": {
-        "id": "8f560497-6eaa-4600-af81-cddaf3db3a7d"
-      },
-      "outputs": [],
-      "source": [
-        "# Add p-values to AnnData object\n",
-        "adata_concat.var['pvals'] = pvals\n",
-        "adata_concat.var['pvals_adj'] = pvals_adj"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "805e9c59-a29c-4220-b5b6-ba9d7672844e",
-      "metadata": {
-        "id": "805e9c59-a29c-4220-b5b6-ba9d7672844e"
-      },
-      "outputs": [],
-      "source": [
-        "Filter Significant DARs: Filter the results to retain only those regions that are significantly differentially accessible after multiple testing correction."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "4a5ba1af-324e-4599-8f0b-b76349556e07",
-      "metadata": {
-        "id": "4a5ba1af-324e-4599-8f0b-b76349556e07"
-      },
-      "outputs": [],
-      "source": [
-        "significant_dars = adata.var[adata.var['pvals_adj'] < 0.05]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "7acd26c4-c431-4a47-8aeb-4edf6520b75d",
-      "metadata": {
-        "id": "7acd26c4-c431-4a47-8aeb-4edf6520b75d"
-      },
-      "outputs": [],
-      "source": [
-        "Visualize Results: Visualize the differentially accessible regions using various plotting functions available in scanpy or other visualization libraries."
-      ]
     },
     {
       "cell_type": "code",
@@ -524,10 +407,35 @@
       },
       "outputs": [],
       "source": [
-        "sc.pl.heatmap(adata, var_names=significant_dars.index, groupby='condition')\n",
+        "sc.pl.heatmap(adata_concat, var_names=top_dars.index, groupby='condition')\n",
         "\n",
         "Interpret Results: Interpret the biological significance of the differentially accessible regions. This might involve looking at the genes associated with these regions and understanding their roles in the biological conditions you are studying."
       ]
+    },
+    {
+      "source": [
+        "!pip install diffxpy\n",
+        "\n",
+        "import diffxpy.api as de\n",
+        "\n",
+        "# Create a test object\n",
+        "test = de.test.wald(\n",
+        "    data=adata_concat.X,\n",
+        "    formula_loc=\"~ 1 + Treatment\",\n",
+        "    factor_loc_totest=\"Treatment\",\n",
+        "    sample_description=adata_concat.obs\n",
+        ")\n",
+        "\n",
+        "# Get results\n",
+        "summary = test.summary()"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "V4DX7Y0t1K1S"
+      },
+      "id": "V4DX7Y0t1K1S",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
