--- a/scATAC_seq_(1)_DA.ipynb
+++ b/scATAC_seq_(1)_DA.ipynb
@@ -1556,7 +1556,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Monkey patch\n",
+        "#numpy type aliases\n",
         "np.float = float\n",
         "np.int = int   #module 'numpy' has no attribute 'int'\n",
         "np.object = object    #module 'numpy' has no attribute 'object'\n",
@@ -1590,12 +1590,12 @@
         "test_tt.summary()"
       ],
       "metadata": {
-        "id": "rFgQNZdnJavq",
-        "outputId": "c5658f2a-650c-42c6-fbd0-381c2d18887a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 617
-        }
+        },
+        "id": "rFgQNZdnJavq",
+        "outputId": "c5658f2a-650c-42c6-fbd0-381c2d18887a"
       },
       "id": "rFgQNZdnJavq",
       "execution_count": 61,
