--- a/scATAC_seq_(1)_DA.ipynb
+++ b/scATAC_seq_(1)_DA.ipynb
@@ -997,6 +997,23 @@
     },
     {
       "source": [
+        "# Sort by adjusted p-value in ascending order (most significant first)\n",
+        "top_dars_sorted = top_dars.sort_values(by='pvals_adj')\n",
+        "\n",
+        "# Select the top 10 rows\n",
+        "top_10_dars = top_dars_sorted.head(10)\n",
+        "bottom_10_dars = top_dars_sorted.tail(10)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "sXy0cYRvDroV"
+      },
+      "id": "sXy0cYRvDroV",
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "source": [
         "# Create scatterplot of differential accessibility results\n",
         "sns.scatterplot(x=top_dars['logfoldchanges'], y=-np.log10(top_dars['pvals_adj']))\n",
         "plt.xlabel('log2 Fold Change')\n",
@@ -1008,7 +1025,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 528
+          "height": 527
         },
         "id": "cvRmTZ73Beqq",
         "outputId": "706ae74a-cf62-487e-ec7b-7d6aca8c9dfd"
@@ -1035,23 +1052,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "source": [
-        "# Sort by adjusted p-value in ascending order (most significant first)\n",
-        "top_dars_sorted = top_dars.sort_values(by='pvals_adj')\n",
-        "\n",
-        "# Select the top 10 rows\n",
-        "top_10_dars = top_dars_sorted.head(10)\n",
-        "bottom_10_dars = top_dars_sorted.tail(10)"
-      ],
-      "cell_type": "code",
-      "metadata": {
-        "id": "sXy0cYRvDroV"
-      },
-      "id": "sXy0cYRvDroV",
-      "execution_count": 32,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1174,7 +1174,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 627
         },
         "id": "El76tq6-DgtC",
         "outputId": "913bed64-17b2-4bbf-b467-a6703f1b084d"
@@ -1592,7 +1592,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
+          "height": 423
         },
         "id": "rFgQNZdnJavq",
         "outputId": "c5658f2a-650c-42c6-fbd0-381c2d18887a"
@@ -1996,6 +1996,23 @@
           "execution_count": 61
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sort by adjusted p-value in ascending order (most significant first)\n",
+        "top_dars_sorted = test_tt.sort_values(by='pvals_adj')\n",
+        "\n",
+        "# Select the top 10 rows\n",
+        "top_10_dars = top_dars_sorted.head(10)\n",
+        "bottom_10_dars = top_dars_sorted.tail(10)"
+      ],
+      "metadata": {
+        "id": "9h5uOPuyRi5f"
+      },
+      "id": "9h5uOPuyRi5f",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
