--- a/scATAC_seq_(2).ipynb
+++ b/scATAC_seq_(2).ipynb
@@ -525,6 +525,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "execution_count": 40,
+      "id": "ffa7a645-c56a-4d94-af04-6869e008ca12",
+      "metadata": {
+        "id": "ffa7a645-c56a-4d94-af04-6869e008ca12"
+      },
+      "outputs": [],
+      "source": [
+        "from scipy import stats"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "43f56d4f-c4ec-496e-96bd-6645365df65c",
       "metadata": {
@@ -675,11 +687,11 @@
       ],
       "metadata": {
         "id": "hgtc1ntUSEnY",
-        "outputId": "beb11f95-dcb9-4369-e78f-98922791f045",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "outputId": "beb11f95-dcb9-4369-e78f-98922791f045"
       },
       "id": "hgtc1ntUSEnY",
       "execution_count": 39,
@@ -699,36 +711,13 @@
     {
       "cell_type": "code",
       "source": [
-        "from shutil import copyfile"
+        "#from shutil import copyfile\n",
+        "#copyfile('adata_concat.h5ad', '/content/drive/MyDrive/Colab Notebooks/adata_concat.h5ad')"
       ],
       "metadata": {
         "id": "KjyfYBv6VmZv"
       },
       "id": "KjyfYBv6VmZv",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "copyfile('adata_concat.h5ad', '/content/drive/MyDrive/Colab Notebooks/adata_concat.h5ad')"
-      ],
-      "metadata": {
-        "id": "Ok-ZttTdT6kM"
-      },
-      "id": "Ok-ZttTdT6kM",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "adata_concat"
-      ],
-      "metadata": {
-        "id": "1cXRT2CZWS8z"
-      },
-      "id": "1cXRT2CZWS8z",
       "execution_count": null,
       "outputs": []
     },
@@ -740,30 +729,6 @@
       },
       "source": [
         "# Differential accesibility analysis"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np"
-      ],
-      "metadata": {
-        "id": "xRVSWxoGo1by"
-      },
-      "id": "xRVSWxoGo1by",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ffa7a645-c56a-4d94-af04-6869e008ca12",
-      "metadata": {
-        "id": "ffa7a645-c56a-4d94-af04-6869e008ca12"
-      },
-      "outputs": [],
-      "source": [
-        "from scipy import stats"
       ]
     },
     {
