--- a/scATAC_seq_(2).ipynb
+++ b/scATAC_seq_(2).ipynb
@@ -40,15 +40,25 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6-v7gtUrSUkd"
+      },
+      "id": "6-v7gtUrSUkd",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "!pip install -q condacolab"
       ],
       "metadata": {
         "id": "HYs7RhoU68Ks"
       },
-      "id": "HYs7RhoU68Ks",
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "HYs7RhoU68Ks"
     },
     {
       "cell_type": "code",
@@ -58,9 +68,9 @@
       "metadata": {
         "id": "QBQXEKjk7O-V"
       },
-      "id": "QBQXEKjk7O-V",
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "QBQXEKjk7O-V"
     },
     {
       "cell_type": "code",
@@ -68,23 +78,11 @@
         "condacolab.install()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YdiPg8vS7ZKq",
-        "outputId": "2d248e0a-e5e7-4294-fe59-b6c349949fe5"
+        "id": "YdiPg8vS7ZKq"
       },
-      "id": "YdiPg8vS7ZKq",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✨🍰✨ Everything looks OK!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "YdiPg8vS7ZKq"
     },
     {
       "cell_type": "code",
@@ -92,23 +90,11 @@
         "!conda --version"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VITjp1M56yu_",
-        "outputId": "e93ddaee-0997-472a-e2db-dbdc473ccb79"
+        "id": "VITjp1M56yu_"
       },
-      "id": "VITjp1M56yu_",
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "conda 23.11.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "VITjp1M56yu_"
     },
     {
       "cell_type": "code",
@@ -116,23 +102,11 @@
         "!which conda"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "S-oCMIm-7p9i",
-        "outputId": "fce877be-0a28-4ee6-82fb-6699e1bb81f6"
+        "id": "S-oCMIm-7p9i"
       },
-      "id": "S-oCMIm-7p9i",
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/usr/local/bin/conda\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "S-oCMIm-7p9i"
     },
     {
       "cell_type": "code",
@@ -140,23 +114,11 @@
         "!conda config --add channels conda-forge"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "D6zjhdZm-BJp",
-        "outputId": "40f898b3-2ed1-4c76-dd06-af11925a06cb"
+        "id": "D6zjhdZm-BJp"
       },
-      "id": "D6zjhdZm-BJp",
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: 'conda-forge' already in 'channels' list, moving to the top\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "D6zjhdZm-BJp"
     },
     {
       "cell_type": "code",
@@ -164,23 +126,11 @@
         "!conda config --add channels bioconda"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JpJESCcU-fO_",
-        "outputId": "a3fc8c2c-0abf-48b8-bbb1-0c30a18cf00c"
+        "id": "JpJESCcU-fO_"
       },
-      "id": "JpJESCcU-fO_",
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: 'bioconda' already in 'channels' list, moving to the top\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "JpJESCcU-fO_"
     },
     {
       "source": [
@@ -188,26 +138,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gZdiRWwb1rZJ",
-        "outputId": "ab38dce5-63be-43cb-b19c-5ffc5e22564a"
+        "id": "gZdiRWwb1rZJ"
       },
-      "id": "gZdiRWwb1rZJ",
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.3/12.3 MB\u001b[0m \u001b[31m97.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "scprep 1.2.3 requires pandas<2.1,>=0.25, but you have pandas 2.1.1 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "gZdiRWwb1rZJ"
     },
     {
       "cell_type": "code",
@@ -215,32 +150,11 @@
         "!pip show snapatac2"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jsCJ2get4W8l",
-        "outputId": "f1aa09fb-46f3-4e28-ba2b-49e46c5c3e6b"
+        "id": "jsCJ2get4W8l"
       },
-      "id": "jsCJ2get4W8l",
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Name: snapatac2\n",
-            "Version: 2.7.1\n",
-            "Summary: SnapATAC2: Single-cell epigenomics analysis pipeline\n",
-            "Home-page: https://github.com/\n",
-            "Author: Kai Zhang <kai@kzhang.org>\n",
-            "Author-email: Kai Zhang <zhangkai33@westlake.edu.cn>\n",
-            "License: MIT\n",
-            "Location: /usr/local/lib/python3.10/site-packages\n",
-            "Requires: anndata, igraph, kaleido, macs3, multiprocess, natsort, numpy, pandas, plotly, polars, pooch, pyarrow, pyfaidx, rustworkx, scikit-learn, scipy, tqdm, typeguard\n",
-            "Required-by: \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "jsCJ2get4W8l"
     },
     {
       "cell_type": "code",
@@ -250,22 +164,22 @@
       "metadata": {
         "id": "z2G4FDYqgSmQ"
       },
-      "id": "z2G4FDYqgSmQ",
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "z2G4FDYqgSmQ"
     },
     {
       "cell_type": "code",
       "source": [
-        "!pip install umap-learn -q\n",
+        "!pip install umap-learn\n",
         "\n"
       ],
       "metadata": {
         "id": "VZLaiDEzlB1m"
       },
-      "id": "VZLaiDEzlB1m",
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "VZLaiDEzlB1m"
     },
     {
       "cell_type": "code",
@@ -275,9 +189,9 @@
       "metadata": {
         "id": "BCEdegOSgRBg"
       },
-      "id": "BCEdegOSgRBg",
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "BCEdegOSgRBg"
     },
     {
       "cell_type": "code",
@@ -287,9 +201,9 @@
       "metadata": {
         "id": "FVmqXk-vlFrB"
       },
-      "id": "FVmqXk-vlFrB",
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "FVmqXk-vlFrB"
     },
     {
       "cell_type": "code",
@@ -299,9 +213,9 @@
       "metadata": {
         "id": "CM_xhHZxUcF5"
       },
-      "id": "CM_xhHZxUcF5",
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "CM_xhHZxUcF5"
     },
     {
       "cell_type": "code",
@@ -311,9 +225,9 @@
       "metadata": {
         "id": "NYl1nQOhUoj2"
       },
-      "id": "NYl1nQOhUoj2",
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [],
+      "id": "NYl1nQOhUoj2"
     },
     {
       "cell_type": "code",
@@ -321,97 +235,87 @@
         "pip show scanpy"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rkvTEjpw_csS",
-        "outputId": "c82bceea-424e-4748-ba62-a7fec3b1164c"
+        "id": "rkvTEjpw_csS"
       },
-      "id": "rkvTEjpw_csS",
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Name: scanpy\n",
-            "Version: 1.10.4\n",
-            "Summary: Single-Cell Analysis in Python.\n",
-            "Home-page: \n",
-            "Author: Alex Wolf, Philipp Angerer, Fidel Ramirez, Isaac Virshup, Sergei Rybakov, Gokcen Eraslan, Tom White, Malte Luecken, Davide Cittaro, Tobias Callies, Marius Lange, Andrés R. Muñoz-Rojas\n",
-            "Author-email: \n",
-            "License: \n",
-            "Location: /usr/local/lib/python3.10/site-packages\n",
-            "Requires: anndata, h5py, joblib, legacy-api-wrap, matplotlib, natsort, networkx, numba, numpy, packaging, pandas, patsy, pynndescent, scikit-learn, scipy, seaborn, session-info, statsmodels, tqdm, umap-learn\n",
-            "Required-by: \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": [],
+      "id": "rkvTEjpw_csS"
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install magic-impute -q"
-      ],
-      "metadata": {
-        "id": "wHb_wo4QB7C_"
-      },
-      "id": "wHb_wo4QB7C_",
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install leidenalg -q"
-      ],
-      "metadata": {
-        "id": "oirt93RVEK-D"
-      },
-      "id": "oirt93RVEK-D",
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "id": "4e15629f-bdc4-46dd-8375-a1f2e17960ca",
+      "execution_count": null,
       "metadata": {
         "id": "4e15629f-bdc4-46dd-8375-a1f2e17960ca"
       },
       "outputs": [],
       "source": [
         "import numpy as np"
-      ]
+      ],
+      "id": "4e15629f-bdc4-46dd-8375-a1f2e17960ca"
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
-      "id": "37ff51dc-8860-4ab6-ab44-8223b33ea879",
+      "execution_count": null,
       "metadata": {
         "id": "37ff51dc-8860-4ab6-ab44-8223b33ea879"
       },
       "outputs": [],
       "source": [
         "import anndata as ad"
-      ]
+      ],
+      "id": "37ff51dc-8860-4ab6-ab44-8223b33ea879"
+    },
+    {
+      "source": [
+        "!pip install diffxpy -q"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "V4DX7Y0t1K1S"
+      },
+      "execution_count": null,
+      "outputs": [],
+      "id": "V4DX7Y0t1K1S"
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
-      "id": "f54f07e0-84cc-4ab9-a156-ea8467a76fc4",
+      "source": [
+        "import diffxpy.api as de"
+      ],
+      "metadata": {
+        "id": "yb2ApyZm9Bfz"
+      },
+      "execution_count": null,
+      "outputs": [],
+      "id": "yb2ApyZm9Bfz"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "f54f07e0-84cc-4ab9-a156-ea8467a76fc4"
       },
       "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt"
-      ]
+      ],
+      "id": "f54f07e0-84cc-4ab9-a156-ea8467a76fc4"
+    },
+    {
+      "source": [
+        "import seaborn as sns"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "jIEyfb4NApUa"
+      },
+      "execution_count": null,
+      "outputs": [],
+      "id": "jIEyfb4NApUa"
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
-      "id": "dfc626e2-9a64-4f0f-8677-1da6e446ea3a",
+      "execution_count": null,
       "metadata": {
         "id": "dfc626e2-9a64-4f0f-8677-1da6e446ea3a"
       },
@@ -419,43 +323,20 @@
       "source": [
         "import plotly.subplots as sp\n",
         "import plotly.graph_objects as go"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import seaborn as sns"
       ],
-      "metadata": {
-        "id": "BBWtxu3NSeBa"
-      },
-      "id": "BBWtxu3NSeBa",
-      "execution_count": 23,
-      "outputs": []
+      "id": "dfc626e2-9a64-4f0f-8677-1da6e446ea3a"
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
-      "id": "ffa7a645-c56a-4d94-af04-6869e008ca12",
+      "execution_count": null,
       "metadata": {
         "id": "ffa7a645-c56a-4d94-af04-6869e008ca12"
       },
       "outputs": [],
       "source": [
         "from scipy import stats"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd"
       ],
-      "metadata": {
-        "id": "PGENXcLTtJLi"
-      },
-      "id": "PGENXcLTtJLi",
-      "execution_count": 25,
-      "outputs": []
+      "id": "ffa7a645-c56a-4d94-af04-6869e008ca12"
     },
     {
       "cell_type": "markdown",
@@ -474,84 +355,23 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BpK5P48ACJOW",
-        "outputId": "250f72eb-5626-42e0-b999-431c71bab892"
+        "id": "BpK5P48ACJOW"
       },
       "id": "BpK5P48ACJOW",
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "be1662ba-006c-4be4-9858-70480fa51fe3",
       "metadata": {
-        "id": "be1662ba-006c-4be4-9858-70480fa51fe3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "937f2faa-cd69-4af5-8ae7-fa9aad680998"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/site-packages/anndata/_core/anndata.py:1754: UserWarning: Observation names are not unique. To make them unique, call `.obs_names_make_unique`.\n",
-            "  utils.warn_names_duplicates(\"obs\")\n"
-          ]
-        }
-      ],
-      "source": [
-        "#Load AD matrix from google drive, PCA and Batch corrected\n",
-        "MTXmerged_PC_BC = sc.read_h5ad('/content/drive/MyDrive/Colab Notebooks/MTXmerged_PCA_BC.h5ad')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 28,
-      "id": "967b901c-c65e-436a-8c7c-2583264344ce",
-      "metadata": {
-        "id": "967b901c-c65e-436a-8c7c-2583264344ce"
+        "id": "be1662ba-006c-4be4-9858-70480fa51fe3"
       },
       "outputs": [],
       "source": [
-        "adata_concat = MTXmerged_PC_BC"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!rm MTXmerged_PC_BC"
-      ],
-      "metadata": {
-        "id": "tw1xT5kyzxkZ",
-        "outputId": "04e42324-69f2-4280-ccdd-cc646139be77",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "tw1xT5kyzxkZ",
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "rm: cannot remove 'MTXmerged_PC_BC': No such file or directory\n"
-          ]
-        }
+        "#Load AD matrix from google drive, PCA and Batch corrected\n",
+        "adata_concat = sc.read_h5ad('/content/drive/MyDrive/Colab Notebooks/MTXmerged_PCA_BC.h5ad')"
       ]
     },
     {
@@ -579,7 +399,7 @@
         "id": "-zjMUqgNRKT9"
       },
       "id": "-zjMUqgNRKT9",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,18 +480,6 @@
       "execution_count": null,
       "outputs": [],
       "id": "CRjmsHTz0G1R"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "adata_concat"
-      ],
-      "metadata": {
-        "id": "c7_q94_1rIYs"
-      },
-      "id": "c7_q94_1rIYs",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
