--- a/scATAC_seq_(2).ipynb
+++ b/scATAC_seq_(2).ipynb
@@ -45,7 +45,7 @@
         "id": "6-v7gtUrSUkd"
       },
       "id": "6-v7gtUrSUkd",
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "HYs7RhoU68Ks"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [],
       "id": "HYs7RhoU68Ks"
     },
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "QBQXEKjk7O-V"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [],
       "id": "QBQXEKjk7O-V"
     },
@@ -82,9 +82,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YdiPg8vS7ZKq",
-        "outputId": "c90d2bc0-b482-43ff-f740-1cf6064451ce"
+        "outputId": "4c2a32c9-a86f-4da6-e211-7c8f1b29913f"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,9 +106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VITjp1M56yu_",
-        "outputId": "225402f4-bbbb-4605-e5ac-2e923c4f57b2"
+        "outputId": "b9cbf1cb-b3aa-456e-ff15-6f451f223a7c"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S-oCMIm-7p9i",
-        "outputId": "df073273-446d-43d4-bc74-f12e7ddcacdb"
+        "outputId": "74aec7f5-2a25-46f6-d0dd-4bbae3bde475"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,9 +154,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D6zjhdZm-BJp",
-        "outputId": "05fd7e01-56db-4309-eb6a-ff7158a6dc5b"
+        "outputId": "e1bc2c2c-b11a-473b-87c9-ba59b9b234c9"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,9 +178,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JpJESCcU-fO_",
-        "outputId": "a3443911-164c-4d82-b6bb-6ba18361ef9f"
+        "outputId": "f0c415bd-d42a-41a6-a0ac-1921f32a5d60"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +200,7 @@
       "metadata": {
         "id": "gZdiRWwb1rZJ"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [],
       "id": "gZdiRWwb1rZJ"
     },
@@ -214,9 +214,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jsCJ2get4W8l",
-        "outputId": "dc43fba8-8535-4b36-9b6a-5e89539a6c82"
+        "outputId": "c51ea167-1380-4870-daed-f878c7396833"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "z2G4FDYqgSmQ"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [],
       "id": "z2G4FDYqgSmQ"
     },
@@ -260,9 +260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VZLaiDEzlB1m",
-        "outputId": "f93d35f3-5810-4330-cb9a-74bbeab4b1fa"
+        "outputId": "ae127f82-ed2f-41b6-d661-e1c6c0b934a7"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "BCEdegOSgRBg"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [],
       "id": "BCEdegOSgRBg"
     },
@@ -303,7 +303,7 @@
       "metadata": {
         "id": "FVmqXk-vlFrB"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [],
       "id": "FVmqXk-vlFrB"
     },
@@ -315,7 +315,7 @@
       "metadata": {
         "id": "CM_xhHZxUcF5"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [],
       "id": "CM_xhHZxUcF5"
     },
@@ -327,7 +327,7 @@
       "metadata": {
         "id": "NYl1nQOhUoj2"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [],
       "id": "NYl1nQOhUoj2"
     },
@@ -341,9 +341,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rkvTEjpw_csS",
-        "outputId": "59a1de5b-6822-42bd-9a20-c49edfd86a0d"
+        "outputId": "bb7c0407-b8ce-49e0-9c96-bf31998284d6"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "metadata": {
         "id": "4e15629f-bdc4-46dd-8375-a1f2e17960ca"
       },
@@ -378,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 20,
       "metadata": {
         "id": "37ff51dc-8860-4ab6-ab44-8223b33ea879"
       },
@@ -396,7 +396,7 @@
       "metadata": {
         "id": "V4DX7Y0t1K1S"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [],
       "id": "V4DX7Y0t1K1S"
     },
@@ -408,13 +408,13 @@
       "metadata": {
         "id": "yb2ApyZm9Bfz"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [],
       "id": "yb2ApyZm9Bfz"
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 23,
       "metadata": {
         "id": "f54f07e0-84cc-4ab9-a156-ea8467a76fc4"
       },
@@ -432,13 +432,13 @@
       "metadata": {
         "id": "jIEyfb4NApUa"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [],
       "id": "jIEyfb4NApUa"
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 25,
       "metadata": {
         "id": "dfc626e2-9a64-4f0f-8677-1da6e446ea3a"
       },
@@ -451,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 26,
       "metadata": {
         "id": "ffa7a645-c56a-4d94-af04-6869e008ca12"
       },
@@ -482,10 +482,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BpK5P48ACJOW",
-        "outputId": "6073620e-6d21-445f-9bda-a1c453101231"
+        "outputId": "6c9ba406-05f8-4b10-e421-284a14781078"
       },
       "id": "BpK5P48ACJOW",
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,47 +877,34 @@
       "id": "QkYcsillINBn"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Data subsample"
+      ],
+      "metadata": {
+        "id": "1065sP5b72y1"
+      },
+      "id": "1065sP5b72y1"
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Subsample to 50% of cells\n",
+        "adata_subset = sc.pp.subsample(adata_concat, fraction=0.5, copy=True)\n",
+        "\n",
+        "# Perform the Wald test on the subset\n",
         "test = de.test.wald(\n",
-        "    data=adata_concat,\n",
+        "    data=adata_subset,\n",
         "    formula_loc=\"~ 1 + Treatment\",\n",
         "    factor_loc_totest=\"Treatment\"\n",
         ")"
       ],
       "metadata": {
-        "id": "IF_4YDc5wfxR"
+        "id": "KdSdSbY88BT7"
       },
-      "id": "IF_4YDc5wfxR",
+      "id": "KdSdSbY88BT7",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test_tt = de.test.t_test(\n",
-        "    data=adata_concat,\n",
-        "    grouping=\"Treatment\"\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "fycHFdkqHYZM"
-      },
-      "execution_count": null,
-      "outputs": [],
-      "id": "fycHFdkqHYZM"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test_tt.summary()"
-      ],
-      "metadata": {
-        "id": "rFgQNZdnJavq"
-      },
-      "execution_count": null,
-      "outputs": [],
-      "id": "rFgQNZdnJavq"
     },
     {
       "cell_type": "code",
@@ -957,22 +944,13 @@
       "execution_count": null,
       "outputs": [],
       "id": "ru09xqRQFqaw"
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "c96rMjgUF71b"
-      },
-      "execution_count": null,
-      "outputs": [],
-      "id": "c96rMjgUF71b"
     }
   ],
   "metadata": {
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
